[package]
name = "proxy"
version = "0.1.0"
edition = "2024"
authors = ["Gunki <gunki394@gmail.com>"]

[dependencies]
pnet = "0.35.0"
redis = { version = "0.31.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
chrono = {version = "0.4.41", features = ["serde"] }
lazy_static = "1.5"
ctrlc = "3.4.7"
clap = { version = "4.5.38", features = ["derive"], optional = true }
